--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,7 +114,7 @@ jobs:
           [System.Net.ServicePointManager]::SecurityProtocol = 3072
           iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
           choco install innosetup -y
-          refreshenv  
+          refreshenv
       
       - name: Setup Environment
         shell: bash
@@ -256,22 +256,23 @@ jobs:
           flutter pub get
           dart run inno_bundle:build --release 2>&1 | Select-String -Pattern "Compile aborted" -NotMatch
           $issFile = "build\windows\x64\installer\Release\inno-script.iss"
-          if (Test-Path $issFile) {
-              # Remove Icelandic language line
-              $content = Get-Content $issFile -Raw
-              $content = $content -replace '.*Icelandic\.isl.*\r?\n', ''
-              Set-Content $issFile -Value $content -NoNewline
-              $innoPath = "C:\ProgramData\chocolatey\lib\innosetup\tools\ISCC.exe"
-              if (Test-Path $innoPath) {
-                  & "$innoPath" $issFile
-              } else {
-                  Write-Error "Inno Setup not found at $innoPath"
-                  exit 1
-              }
-          } else {
+          if (-not (Test-Path $issFile)) {
               Write-Error "ISS file not found: $issFile"
               exit 1
           }
+          $content = Get-Content $issFile -Raw
+          $content = $content -replace '.*Icelandic\.isl.*\r?\n', ''
+          Set-Content $issFile -Value $content -NoNewline
+          $innoPath = Get-ChildItem 'C:\ProgramData\chocolatey\lib\innosetup\*' -Directory |
+                      Sort-Object Name -Descending |
+                      ForEach-Object { Join-Path $_.FullName 'tools\ISCC.exe' } |
+                      Where-Object { Test-Path $_ } |
+                      Select-Object -First 1
+          if (-not $innoPath) {
+              Write-Error "Inno Setup not found in Chocolatey path."
+              exit 1
+          }
+          & "$innoPath" $issFile
           cd build/windows/x64/runner/Release
           Compress-Archive -Path * -DestinationPath AnymeX-Windows.zip
       
