--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,8 @@ dependencies:
   timeago: ^3.7.1
   flutter_staggered_animations: ^1.1.1
   material_symbols_icons: ^4.2867.0
+  fuzzywuzzy: ^1.2.0
+  expressive_loading_indicator: ^0.0.1
 dev_dependencies:
   build_runner: ^2.4.11
   change_app_package_name: ^1.4.0
