build: reduced build size
Add legacy packaging option for JNI libraries.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -32,6 +32,13 @@ android {
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
+
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
+    
     signingConfigs {
         release {
             def keystoreProperties = new Properties()
