--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
+
+    <uses-permission android:name="android.permission.SENSORS" />
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="false" />
     
     <!-- TV app permissions and features -->
     <uses-feature android:name="android.software.leanback" android:required="false" />
