--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,7 +7,9 @@
     <key>CFBundleDisplayName</key>
     <string>AnymeX</string>
     <key>FLTEnableImpeller</key>
-    <false />
+    <true/>
+    <!-- <key>FLTEnableImpeller</key>
+    <false /> -->
     <key>CFBundleExecutable</key>
     <string>$(EXECUTABLE_NAME)</string>
     <key>CFBundleIdentifier</key>
