--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -125,10 +125,11 @@ flutter_launcher_icons:
 flutter_native_splash:
   fullscreen: true
   color: "#000000"
-  image: assets/images/logo.png
+  # Disabled native splash - using animated logo instead
+  # image: assets/images/logo.png
   android_12:
     color: "#000000"
-    image: assets/images/logo.png
+   # image: assets/images/logo.png
 
 flutter:
   uses-material-design: true
