--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_html: ^3.0.0
   flutter_inappwebview: ^6.1.5
+  flutter_svg: ^2.0.10
   # flutter_local_notifications: ^18.0.1
   flutter_markdown: ^0.7.6
   flutter_native_splash: ^2.4.4
@@ -124,10 +125,11 @@ flutter_launcher_icons:
 flutter_native_splash:
   fullscreen: true
   color: "#000000"
-  image: assets/images/logo.png
+  # Disabled native splash - using animated logo instead
+  # image: assets/images/logo.png
   android_12:
     color: "#000000"
-    image: assets/images/logo.png
+   # image: assets/images/logo.png
 
 flutter:
   uses-material-design: true
